cilium-cli/connectivity/manifests/echo-ingress-auth-fail.yaml

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: auth-ingress-fail
  namespace: cilium-test
spec:
  description: "Allow other client to contact echo but fail on auth"
  endpointSelector:
    matchLabels:
      kind: echo
  ingress:
    - fromEndpoints:
        - matchLabels:
            kind: client
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
      auth:
        type: always-fail
